# QI

./: CMakeLists.txt  colors.cmake  common_functions.cmake
src/cpp/: CMakeLists.txt
src/posix/: CMakeLists.txt
src/posix/file_descriptors/: file_descriptor.c
src/posix/file_handling/: file_handling.c
src/posix/file_inodes/: file_inodes.c
src/posix/group_ids/: group_ids.c
src/posix/process_environment_variables/: process_environment_variables.c
src/posix/process_identifiers/: process_identifiers.c
src/posix/uid_and_special_file_permissions/: uid_and_special_file_permissions.c
src/posix/users_and_groups/: users_and_groups.c
